add account editing, and componentize stats
